--- a/content.css
+++ b/content.css
@@ -1,28 +1,29 @@
 /*
 eXe
-Copyright 2004-2005, University of Auckland
-garden theme display styles.
+Copyright 2004-2005, eXelearning. 
+style for  slate
 Modified by eXeLearning.net
 */
 html{padding:0}
-body{font:.75em/1.5 Arial,Verdana,Helvetica,sans-serif;padding:15px;margin:0;text-align:left;color:#222;background:#F2FFBF}
-a{color:#E65C00}
-a:hover,a:focus{color:#B34700}
-#header,#emptyHeader{text-align:left;height:3em;padding-left:0;font-size:1.5em;line-height:3em;text-shadow:1px 1px 1px #fff;border-bottom:2px solid #ACBF60;border-top:2px solid #ACBF60;color:#889F65} /* Header is also in single page */
+body{font:.75em/1.5 Arial,Verdana,Helvetica,sans-serif;padding:15px;margin:0;text-align:left;color:#222;background:#CAC3B5}
+a{color:#004080}
+a:hover,a:focus{color:#036}
+#header,#emptyHeader{text-align:left;height:3em;padding-left:0;font-size:1.5em;line-height:3em;text-shadow:1px 1px 1px #444;border-bottom:4px solid #8A0A0A;color:#fff} /* Header is also in single page */
 #header h1{margin:0;font-size:1em}
-#nodeDecoration{text-align:left;padding:1em 0;margin-bottom:2em;background:#F3FFC3;text-shadow:1px 1px 1px #fff;border-bottom:2px solid #ACBF60;border-top:2px solid #ACBF60;color:#889F65}
+#nodeDecoration{text-align:left;padding:.75em 0;margin-bottom:1.5em;text-shadow:1px 1px 1px #fff;border-bottom:4px solid #8A0A0A;color:#514E4C}
 #nodeTitle,.nodeTitle{font-size:1.5em;margin:0;font-weight:bold;text-align:right} /* .nodeTitle when single page */
-.nodeTitle{padding:.1em 0 .6em 0;border-bottom:2px solid #ACBF60;margin-top:1em;text-align:right;color:#889F65;text-shadow:1px 1px 1px #fff}
+.nodeTitle{padding:.1em 0 .6em 0;border-bottom:4px solid #fff;margin-top:1em;text-align:right;color:#900;text-shadow:1px 1px 1px #fff}
 #main h2{font-size:1.4em}
-#main .iDeviceTitle{display:inline;font-size:1.4em}
+#main .iDeviceTitle{display:inline;font-weight:normal;font-size:1.4em}
 h3{font-size:1.25em;color:#666}
 #main h4{font-size:1.2em}
 #main h5{font-size:1.1em}
-.iDevice,.readingIdevice .iDevice{margin:2em 0;padding:10px;background:#FAFFE6;border-radius:5px;border:1px solid #ACBF60}
-.emphasis0{padding:0;background:none;border:none}
-.iDevice_icon{height:50px;width:auto;margin-right:8px} /* Legacy: old iDevices */
-.iDevice_header{background-image:url(icon_generic.gif);padding-left:58px}
-.iDevice_content{overflow:auto}
+.iDevice,.readingIdevice .iDevice{margin:2em 15px;background:#fff;padding:15px}
+.emphasis0{background:none;margin:2em auto;padding:0 15px}
+
+/* iDevice icons */
+.iDevice_icon{height:48px;width:auto;margin-right:8px}
+.iDevice_header{background:url(icon_generic.gif) no-repeat 0 0;padding-left:56px}
 .activityIdevice .iDevice_header{background-image:url(icon_activity.gif)}
 .readingIdevice .iDevice_header{background-image:url(icon_reading.gif)}
 .ListaIdevice .iDevice_header,
@@ -36,10 +37,12 @@ h3{font-size:1.25em;color:#666}
 .GalleryIdevice .iDevice_header{background-image:url(icon_gallery.gif)}
 .objectivesIdevice .iDevice_header{background-image:url(icon_objectives.gif)}
 .ReflectionIdevice .iDevice_header{background-image:url(icon_reflection.gif)}
-.iDeviceTitle{font-size:1.3em;vertical-align:top;top:0;color:#A1B386;line-height:3em} 
-.iDevice_inner{background:#FAFFE6;border-radius:5px;padding:10px 20px}
-.emphasis0 .iDevice_inner{background:none;padding:0}
-#siteFooter{color:#444;font-size:.95em}
+
+.iDeviceTitle{font-size:1.3em;vertical-align:top;top:0;color:#900;line-height:3em}
+.iDevice_content{overflow:auto}
+.iDevice_inner{margin-left:55px}
+#siteFooter{color:#000;font-size:.95em}
+#siteFooter a{color:#DB0B00}
 input,select,textarea{font-family:Arial,Verdana,Helvetica,sans-serif;font-size:1em}
 .ExternalUrlIdevice iframe{border:none}
 /* Lightbox */
@@ -50,7 +53,7 @@ input,select,textarea{font-family:Arial,Verdana,Helvetica,sans-serif;font-size:1
 li{list-style-position:outside}
 #wikipedia-content ul li{list-style-image:none;margin-bottom:auto}
 /* Form buttons */
-.feedbackbutton{background:#AACCB5;margin-bottom:1em}
+.feedbackbutton{background:#FFFDB1;margin-bottom:1em}
 /* Hide/Show iDevice */
 .toggle-idevice{margin:12px 0 0;text-align:right;display:block}
 .iDevice_header .toggle-idevice{float:right;margin:0}
