--- a/nav.css
+++ b/nav.css
@@ -1,39 +1,40 @@
-/* 
-Copyright University of Auckland 2004
-Created by Brent Simpson, brent.simpson@auckland.ac.nz
-Centre for Flexible and Distance Learning
+/*
+Copyright eXelearning 2007
+Created by Brent Simpson, brent@exelearning.org
 Modified by eXeLearning.net
 */
-#content{width:100%;position:relative;padding-bottom:10px;min-width:985px;border-top:2px solid #ACBF60}
-#main-wrapper{padding:10px 0 0 250px}
-#main{width:100%}
-#content{padding-bottom:21px}
-#header,#emptyHeader{border-top:none}
+body{padding:0}
+#content{width:100%;position:relative;min-width:965px}
+#main{padding:20px 20px 0 20px;background:#fff;margin-left:230px;overflow:auto}
+#header,#emptyHeader{border-top:none;padding-left:15px}
 #nodeDecoration{padding:0;margin:0;background:none;border:none}
-#nodeTitle{padding:.1em 0 .6em 0;border-bottom:2px solid #ACBF60}
+#nodeTitle{padding:0 0 .7em 0;border-bottom:4px solid #8B8B89}
+.iDevice,.readingIdevice .iDevice{margin:2em 0;padding:0}
+.emphasis0{padding:0}
+.iDevice_inner{margin-left:55px;border-bottom:1px solid #ddd;padding-bottom:20px}
+.emphasis0,.GalleryIdevice .iDevice{padding-bottom:15px;border-bottom:1px solid #ddd}
 /* Navigation */
 #skipNav{text-align:center;padding-top:18px}
-#skipNav a{background:#fff;color:#96852C}
-#siteNav{width:230px;float:left;padding-right:20px}
+#skipNav a{background:#8A0A0A}
+#siteNav{width:230px;float:left}
 #siteNav,#siteNav ul{border-color:#FAFFE6}
 #siteNav ul,#siteNav li{margin:0;padding:0;list-style:none}
-#siteNav a{display:block;padding:4px 0 4px 15px;color:#96852C;border-bottom:1px solid #ccc;border-right:2px solid #FAFFE6;background:#fff}
-#siteNav a:hover,#siteNav a:focus{background-color:#FFEDBF;color:#517793}
+#siteNav a{display:block;padding:4px 0 4px 15px;color:#EAE0C6;border-bottom:1px solid #696967;border-top:1px solid #696967;background:#696967}
+#siteNav a:hover,#siteNav a:focus{background-color:#848484}
 * html #siteNav a{display:inline-block;width:100%} /* IE6 */
-#siteNav .main-node{font-weight:bold;font-variant:small-caps;letter-spacing:1px;font-size:1.1em}
 #siteNav ul ul a{padding-left:30px;font-size:.95em}
-#siteNav .active,#siteNav .active:hover,#siteNav .active:focus{color:#fff;background:#94A975}
+#siteNav .active,#siteNav .active:hover,#siteNav .active:focus{background:#8B8B89;border-color:#fff}
 #siteNav .other-section{display:none}
 #siteNav ul ul ul a{padding-left:45px}
-#siteFooter{padding-left:250px}
+#siteFooter{color:#555;margin-left:230px;background:#fff;padding:20px 0 20px 20px;margin-top:-20px}
 /* Pagination */
-.pagination{border-top:2px solid #ACBF60;padding-top:20px;text-align:right;color:#F5FFCF}
-.pagination a{padding:0;margin:0 5px;color:#B34700}
-.pagination a:hover,.pagination a:focus{color:#E65C00}
-#topPagination{position:absolute;top:-2px;width:100%;right:0}
+.pagination{text-align:right;color:#fff}
+.pagination a{padding:0;margin:0 5px;color:#036}
+.pagination a:hover,.pagination a:focus{color:#3C5866}
+#topPagination{position:absolute;top:-2px;width:100%;right:20px}
 #topPagination .prev{margin-left:20px}
-#topPagination .pagination{border:none}
-#bottomPagination{padding-left:250px}
+#topPagination .pagination{border:none;color:#CAC3B5;padding-top:20px}
+#bottomPagination{padding:0 20px 0 250px}
 /* Autoclear */
 #content:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0} 
 #content{display:inline-block}
